--- a/style/style.css
+++ b/style/style.css
@@ -98,8 +98,9 @@
   .page .container_foto_portfolio {
     display: grid;
     background-color: #303030;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-template-rows: repeat(3, 300px);
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 25%));
+    grid-template-rows: repeat(auto-fill, 25%);
     margin: 0;
     padding: 0;
   }
@@ -358,6 +359,9 @@
 }
 /*ДЛЯ ПЛАНШЕТА*#######################*/
 @media screen and (min-width: 768px) and (max-width: 1440px) {
+  /** {
+    border: 2px black solid;
+  }*/
   .page {
     font-size: 16px;
     max-width: 100vw;
@@ -366,9 +370,28 @@
     /*длинный логотип под верхней навигацией*/
     /*Лицевой блок*/
     /*Портфолио работ**************/
+    /*.container_foto_portfolio {
+      display: grid;
+      max-width: 100vw;
+      background-color: #303030;
+      justify-items: center;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 25%));
+      grid-template-rows: repeat(auto-fill, 25%);
+      margin: 0;
+      padding: 0;
+    }*/
     /*Разделительная с цитатой*********/
     /*Блок - Наши преимущества**************/
     /*Контейнер - Наши проекты в инстаграмм*/
+    /*.container_foto {
+      display: grid;
+      width: 100vw;
+      grid-template-areas:
+        "foto1 foto2"
+        "foto3 foto4"
+        "foto5 foto6";
+      background-color: #fefefe;
+    }*/
     /*Стилизуем футер*/
   }
   .page .nav {
@@ -436,14 +459,17 @@
     letter-spacing: 1px;
   }
   .page .container_foto_portfolio {
-    display: grid;
-    max-width: 100vw;
-    background-color: #303030;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-template-rows: repeat(3, 300px);
-    justify-items: center;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    width: 93vw;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2%;
+    background-color: #fefefe;
+  }
+  .page .container_foto_portfolio .portf {
+    min-width: 100px;
+    max-width: 150px;
   }
   .page .h2 {
     display: grid;
@@ -590,10 +616,17 @@
     grid-area: text6;
   }
   .page .container_foto {
-    display: grid;
-    max-width: 100vw;
-    grid-template-areas: "foto1 foto2" "foto3 foto4" "foto5 foto6";
+    display: flex;
+    width: 95vw;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2%;
     background-color: #fefefe;
+  }
+  .page .container_foto .inst1 {
+    min-width: 100px;
+    max-width: 150px;
   }
   .page .container_bottom_our_proekt {
     display: flex;
@@ -708,6 +741,9 @@
 }
 /*ДЛЯ ТЕЛЕФОНА******************************/
 @media screen and (min-width: 368px) and (max-width: 767px) {
+  /** {
+  *border: 2px black solid;
+  }*/
   .page {
     font-size: 10px;
     max-width: 100vw;
@@ -790,7 +826,7 @@
   }
   .page .container_foto_portfolio {
     display: flex;
-    width: 100vw;
+    width: 93vw;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
@@ -950,7 +986,7 @@
   }
   .page .container_foto {
     display: flex;
-    width: 100vw;
+    width: 95vw;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
