--- a/style/style.scss
+++ b/style/style.scss
@@ -103,8 +103,9 @@
     .container_foto_portfolio {
       display: grid;
       background-color: #303030;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      grid-template-rows: repeat(3, 300px);
+      justify-items: center;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 25%));
+      grid-template-rows: repeat(auto-fill, 25%);
       margin: 0;
       padding: 0;
     }
@@ -360,6 +361,9 @@
 
 /*ДЛЯ ПЛАНШЕТА*#######################*/
 @media screen and (min-width: 768px) and (max-width: 1440px) {
+  /** {
+    border: 2px black solid;
+  }*/
   .page {
     font-size: 16px;
     max-width: 100vw;
@@ -439,15 +443,28 @@
     }
 
     /*Портфолио работ**************/
-    .container_foto_portfolio {
+    /*.container_foto_portfolio {
       display: grid;
       max-width: 100vw;
       background-color: #303030;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      grid-template-rows: repeat(3, 300px);
       justify-items: center;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 25%));
+      grid-template-rows: repeat(auto-fill, 25%);
       margin: 0;
       padding: 0;
+    }*/
+    .container_foto_portfolio {
+      display: flex;
+      width: 93vw;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2%;
+      background-color: #fefefe;
+      .portf {
+        min-width: 100px;
+        max-width: 150px;
+      }
     }
 
     .h2 {
@@ -563,14 +580,27 @@
     }
 
     /*Контейнер - Наши проекты в инстаграмм*/
-    .container_foto {
+    /*.container_foto {
       display: grid;
-      max-width: 100vw;
+      width: 100vw;
       grid-template-areas:
         "foto1 foto2"
         "foto3 foto4"
         "foto5 foto6";
       background-color: #fefefe;
+    }*/
+    .container_foto {
+      display: flex;
+      width: 95vw;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2%;
+      background-color: #fefefe;
+      .inst1 {
+        min-width: 100px;
+        max-width: 150px;
+      }
     }
 
     .container_bottom_our_proekt {
@@ -719,6 +749,9 @@
 
 /*ДЛЯ ТЕЛЕФОНА******************************/
 @media screen and (min-width: 368px) and (max-width: 767px) {
+  /** {
+  *border: 2px black solid;
+  }*/
   .page {
     font-size: 10px;
     max-width: 100vw;
@@ -804,7 +837,7 @@
     /*Портфолио работ**************/
     .container_foto_portfolio {
       display: flex;
-      width: 100vw;
+      width: 93vw;
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: center;
@@ -935,7 +968,7 @@
     /*Контейнер - Наши проекты в инстаграмм*/
     .container_foto {
       display: flex;
-      width: 100vw;
+      width: 95vw;
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: center;
